--- a/platformio.ini
+++ b/platformio.ini
@@ -12,3 +12,9 @@
 platform = espressif32
 board = esp32dev
 framework = arduino
+lib_deps = 
+    h2zero/NimBLE-Arduino@^2.1.0
+	https://github.com/async-mcu/async-mcu-core.git
+
+monitor_filters = esp32_exception_decoder
+monitor_speed = 115200
